--- a/paxos-reconf.tex
+++ b/paxos-reconf.tex
@@ -1386,7 +1386,7 @@ Nikolaus Jehl for their advice and comments on earlier drafts of this paper.
 % http://www.michaelshell.org/tex/ieeetran/bibtex/
 \bibliographystyle{IEEEtran}
 % argument is your BibTeX string definitions and bibliography database(s)
-\bibliography{jitter-free-membership}
+\bibliography{paxos-reconf}
 %
 % <OR> manually copy in the resultant .bbl file
 % set second argument of \begin to the number of references
