--- a/paxos-reconf.bib
+++ b/paxos-reconf.bib
@@ -39,7 +39,6 @@ month        = {April},
 pages        = {103–115},
 publisher    = {Association for Computing Machinery, Inc.},
 title        = {The SMART way to migrate replicated stateful services},
-url          = {http://research.microsoft.com/apps/pubs/default.aspx?id=67913},
 year         = {2006},
 }
 @TechReport {reconfiguring-a-state-machine,
@@ -48,8 +47,87 @@ month        = {February},
 number       = {MSR-TR-2008-198},
 publisher    = {Microsoft},
 title        = {Reconfiguring a State Machine},
-url          = {http://research.microsoft.com/apps/pubs/default.aspx?id=101824},
 year         = {2008},
 institution  = {Microsoft Research},
 }
+@Inbook{async-reconfig,
+author="Jehl, Leander
+and Meling, Hein",
+editor="Chatterjee, Mainak
+and Cao, Jian-nong
+and Kothapalli, Kishore
+and Rajsbaum, Sergio",
+chapter="Asynchronous Reconfiguration for Paxos State Machines",
+title="Distributed Computing and Networking: 15th International Conference, ICDCN 2014, Coimbatore, India, January 4-7, 2014. Proceedings",
+year="2014",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="119--133",
+isbn="978-3-642-45249-9",
+doi="10.1007/978-3-642-45249-9_8",
+}
+@inproceedings{egalitarian-paxos,
+ author = {Moraru, Iulian and Andersen, David G. and Kaminsky, Michael},
+ title = {There is More Consensus in Egalitarian Parliaments},
+ booktitle = {Proceedings of the Twenty-Fourth ACM Symposium on Operating Systems Principles},
+ series = {SOSP '13},
+ year = {2013},
+ isbn = {978-1-4503-2388-8},
+ location = {Farminton, Pennsylvania},
+ pages = {358--372},
+ numpages = {15},
+ doi = {10.1145/2517349.2517350},
+ acmid = {2517350},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
+@article{paxos-made-simple,
+title={{Paxos made simple}},
+author={Lamport, L.},
+journal={ACM SIGACT News},
+volume={32},
+number={4},
+pages={18--25},
+year={2001}, 
+}
+@inproceedings{raft,
+ author = {Ongaro, Diego and Ousterhout, John},
+ title = {In Search of an Understandable Consensus Algorithm},
+ booktitle = {Proceedings of the 2014 USENIX Conference on USENIX Annual Technical Conference},
+ series = {USENIX ATC'14},
+ year = {2014},
+ isbn = {978-1-931971-10-2},
+ location = {Philadelphia, PA},
+ pages = {305--320},
+ numpages = {16},
+ acmid = {2643666},
+ publisher = {USENIX Association},
+ address = {Berkeley, CA, USA},
+} 
+@TechReport {stoppable-paxos,
+author       = {Leslie Lamport and Dahlia Malkhi and Lidong Zhou},
+month        = {April},
+number       = {MSR-TR-2008-197},
+publisher    = {Microsoft},
+title        = {Stoppable Paxos},
+year         = {2008},
+institution  = {Microsoft Research},
+}
+
+@inproceedings{vertical-paxos,
+ author = {Lamport, Leslie and Malkhi, Dahlia and Zhou, Lidong},
+ title = {Vertical Paxos and Primary-backup Replication},
+ booktitle = {Proceedings of the 28th ACM Symposium on Principles of Distributed Computing},
+ series = {PODC '09},
+ year = {2009},
+ isbn = {978-1-60558-396-9},
+ location = {Calgary, AB, Canada},
+ pages = {312--313},
+ numpages = {2},
+ doi = {10.1145/1582716.1582783},
+ acmid = {1582783},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {replication},
+} 
 
