--- a/paxos-reconf.tex
+++ b/paxos-reconf.tex
@@ -481,38 +481,38 @@ system-wide \textit{consistency}, in the sense that the values chosen are
 guaranteed to be equal across the whole system even in the presence of
 failures. They typically run on a cluster of $2f+1$ nodes, where $f$ is the
 number of faulty nodes that should be tolerated, and consensus is achieved on a
-value $v_i \in \mathbb V$ when $\ge f+1$ (i.e. a majority) of the nodes agree.
-The (nonempty) sets of nodes involved in reaching consensus are known as
+value $v_i$ when $\ge f+1$ (i.e. a majority) of the nodes agree.  The
+(nonempty) sets of nodes involved in reaching consensus are known as
 \textit{quorums} and the set of quorums in use is known as the
 \textit{configuration} of the cluster.
 
 It is normally necessary to be able to add or remove nodes from the cluster
 while it is running. It is crucial that all participating nodes agree on the
 cluster configuration, and this can be achieved by tracking the configuration
-using the consensus algorithm itself using a state machine whose transitions
+with the consensus algorithm itself using a state machine whose transitions
 occur when particular values in the sequence are chosen.
 
-In Paxos, each value $v_i \in \mathbb V$ is chosen using a separate instance
-$i$ of a two-phase consensus protocol known as \textit{Synod}. The full Paxos
-algorithm essentially runs an infinite sequence of Synod protocols in parallel:
-it starts by running phase I of all instances at once and then runs phase II of
-each instance in turn to yield the desired sequence of chosen values. It
-normally remains in phase II for extended periods of time, but will return to
-phase I if certain nodes become faulty, or if messages between certain pairs of
-nodes cease to be delivered reliably for a period, or if the configuration
-changes. Raft's pattern of execution is similar.
+In Paxos, each value $v_i$ is chosen using a separate instance $i$ of a
+two-phase consensus protocol known as \textit{Synod}. The full Paxos algorithm
+essentially runs an infinite sequence of Synod protocols in parallel: it starts
+by running phase I of all instances at once and then runs phase II of each
+instance in turn to yield the desired sequence of chosen values. It normally
+remains in phase II for extended periods of time, but will return to phase I if
+certain nodes become faulty, or if messages between certain pairs of nodes
+cease to be delivered reliably for a period, or if the configuration changes.
+Raft's pattern of execution is similar.
 
 Both algorithms allow for \textit{pipelining} \cite{smart}: later values can be
 proposed before earlier ones have been chosen. To ensure that this preserves
-consistency is nontrivial: a value may only be proposed once a quorum of nodes
-are ready for it, but whether a set of nodes is a quorum or not may change as
-earlier values are chosen. Paxos typically solves this problem by limiting the
-length of the pipeline to some $\alpha > 0$ and requiring that a configuration
-change chosen at instance $i$ does not take effect until at least instance $i +
-\alpha$.  Raft imposes no such limit on the number of concurrently-running
-instances and instead ensures consistency by only allowing certain
-reconfigurations to take place, and then performs sequences of these restricted
-reconfigurations in order to achieve an arbitrary reconfiguration.
+consistency is nontrivial because a value may only be proposed once a quorum of
+nodes are ready for it, but whether a set of nodes is a quorum or not may
+change as earlier values are chosen. Paxos typically solves this problem by
+limiting the length of the pipeline to some $\alpha > 0$ and requiring that a
+configuration change chosen at instance $i$ does not take effect until at least
+instance $i + \alpha$.  Raft imposes no such limit on the number of
+concurrently-running instances and instead ensures consistency by only allowing
+certain reconfigurations to take place, and then performs sequences of these
+restricted reconfigurations in order to achieve an arbitrary reconfiguration.
 
 The choice of the pipeline length parameter $\alpha$ is a little delicate: too
 small and the system may suffer from poor performance due to lack of
@@ -520,12 +520,12 @@ parallelism, but too large and configuration changes can take an unreasonably
 long time to complete. It would be better to be able to vary the value of
 $\alpha$ as the system is running rather than having to choose it up-front, but
 needing such a limit at all seems inelegant\cite{reconfiguring-a-state-machine}
-when compared with Raft's approach.
+particularly when compared with Raft's approach.
 
 Here it is shown that the value of $\alpha$ can indeed be varied as the system
 is running, and that Paxos also supports an unlimited-length pipeline during
 reconfiguration by allowing phase II to start using a new configuration without
-re-running phase I; this is shown to preserve consistency as long as the
+re-running phase I. This is shown to preserve consistency as long as the
 configuration change satisfies certain conditions as described in section
 \ref{configuration-changes} below. In particular, this approach unifies and
 generalises the reconfigurations supported by both Raft and Dynamic Paxos as
@@ -603,14 +603,12 @@ Although it appears that the function $v$ is fixed, in practice it is allowed
 to change as the system runs. Treating it as fixed simplifies the consistency
 proof and highlights that its values need not be included in all messages, but
 means that the system cannot be shown to satisfy any useful liveness
-properties.
-
-To recover liveness, it is enough to note that if the invariants of appendix
-\ref{synod-safety} are satisfied with a value function $v$ then they are
-satisfied for any value function $v'$ that agrees with $v$ on proposed ballots,
-i.e. having $v(b) = v'(b)$ only whenever $\prop{}{b}$.  Furthermore only
-$\owner{b}$ may propose $b$, so if it has not yet proposed a value for $b$ it
-can prove that $\neg\prop{}{b}$ and therefore freely modify $v(b)$.
+properties.  To recover liveness, it is enough to note that if the invariants
+of appendix \ref{synod-safety} are satisfied with a value function $v$ then
+they are satisfied for any value function $v'$ that agrees with $v$ on proposed
+ballots, i.e. having $v(b) = v'(b)$ only whenever $\prop{}{b}$. Since only
+$\owner{b}$ may propose $b$, if it has not yet proposed a value for $b$ it can
+prove that $\neg\prop{}{b}$ and therefore freely modify $v(b)$.
 
 It is also important for liveness that the implementation of $v$ is resilient
 to the same failure modes as the rest of the system. Since the value of each
@@ -629,11 +627,12 @@ integrity.
 It is also worth comparing this approach to that of Vertical
 Paxos\cite{vertical-paxos} which takes care to ensure that the system state is
 completely transferred between nodes before they start to participate fully in
-the cluster, with certain optimisations which are needed since this state
-transfer could be an expensive and time-consuming operation. However if the
-implementation of $v$ is separated out from the consensus algorithm itself then
-the amount of data that must be transferred between nodes becomes small enough
-that it needs no such special treatment.
+the cluster, with certain optimisations to handle the fact that this state
+transfer could be an expensive and time-consuming operation involving a very
+large quantity of data. However if the implementation of $v$ is separated out
+from the consensus algorithm itself then the quantity of data that must be
+transferred between consensus nodes becomes small enough that it needs no
+special treatment.
 
 \subsection{Per-phase quorums}\label{per-phase-quorums}
 
@@ -644,11 +643,11 @@ that it needs no such special treatment.
 
 The heart of the consistency property of the Synod algorithm is that the set of
 nodes involved in completing phase I must always intersect the set of nodes
-involved in completing phase II, so that there is at least one node to carry
+involved in completing phase II so that there is at least one node to carry
 information between the two phases. Write $Q_1 \frown Q_2$ to indicate that
-every element of $Q_1$ intersects every element of $Q_2$: more formally $Q_1
-\frown Q_2$ iff every $q_1 \in Q_1$ and $q_2 \in Q_2$ have ${q_1 \cap q_2 \ne
-\varnothing}$. Write $\QI{}(b)$ and $\QII{}(b)$ for the sets of
+every element of $Q_1$ intersects every element of $Q_2$ or more formally
+define $Q_1 \frown Q_2$ iff every $q_1 \in Q_1$ and $q_2 \in Q_2$ have ${q_1
+\cap q_2 \ne \varnothing}$. Write $\QI{}(b)$ and $\QII{}(b)$ for the sets of
 phase-I and phase-II quorums for ballot $b$ respectively.
 
 In the original presentation of the Synod algorithm any (weighted) majority of
@@ -656,8 +655,8 @@ the nodes could be used as a quorum, so that $\QI{}(b_1) \frown \QII{}(b_2)$
 for all $b_1$ and $b_2$ since all majorities intersect. The proof of theorem
 \ref{synod-safety-theorem} in appendix \ref{synod-safety} is a generalisation
 of the original one to demonstrate that consistency still holds even under the
-weaker assumption that $\QI{}(b_1) \frown \QII{}(b_2)$ when $\prop{}{b_1}$,
-$\chosen{}{b_2}$ and $b_1 \succ b_2$.
+weaker assumption that $\QI{}(b_1) \frown \QII{}(b_2)$ only need hold when
+$\prop{}{b_1}$, $\chosen{}{b_2}$ and $b_1 \succ b_2$.
 
 \section{The Paxos algorithm}
 
@@ -686,10 +685,10 @@ v_i(b')$.
 
 The invariants listed in appendix \ref{paxos-invariants} are roughly the same
 as for many other presentations of Paxos with the addition of constraints on
-the eras of instances and ballots as discussed above. Note that invariants
+the eras of instances and ballots as discussed below. Note that invariants
 \ref{paxos-mprom}, \ref{paxos-fprom} and \ref{paxos-bprom} limit the
 acceptances that can be sent as well as the promises, so there is no need to
-define other invariants concerning the sending of acceptances.
+define separate invariants concerning the sending of acceptances.
 
 \subsection{Configuration changes}\label{configuration-changes}
 
@@ -711,17 +710,17 @@ concurrently-running instances since the phase-I and phase-II quorums can
 change era independently.
 
 To achieve this there are also two nondecreasing integer-valued functions, both
-written $e(\cdot)$, which respectively assign an era $e(i) > 0$ to each
-instance $i$, and an era $e(b)$ to each ballot $b$. Intuitively $e(b)$ records
-which quorums may be used to decide that $\prop{i}{b}$ can be sent in phase I
-and $e(i)$ records which quorums may be used to decide that $\chosen{i}{b}$ in
+written $e(\cdot)$, which respectively assign an era $e(i)$ to each instance
+$i$, and an era $e(b)$ to each ballot $b$. Intuitively $e(b)$ records which
+quorums may be used to decide that $\prop{i}{b}$ can be sent in phase I and
+$e(i)$ records which quorums may be used to decide that $\chosen{i}{b}$ in
 phase II, with extra conditions to ensure that ${e(b) \le e(i) \le e(b)+1}$ and
 therefore that ${e(i) \in \{ e(b), e(b)+1 \}}$ and hence $\QI{e(b)} \frown
 \QII{e(i)}$ as required to ensure consistency.  More formally, a node may emit
 $\prop{i}{b}$ only if $e(b) \le e(i)$ and it has received promises for ballot
-$b$ in instance $i$ from a quorum in $\QI{e(b)}$. A node may decide
-$\chosen{i}{b}$ only if ${e(i) \le e(b)+1}$ and it has received $\acc{i}{a}{b}$
-from a quorum in $\QII{e(i)}$.
+$b$ in instance $i$ from a quorum of nodes in $\QI{e(b)}$, and similarly a node
+may decide $\chosen{i}{b}$ only if ${e(i) \le e(b)+1}$ and it has received
+$\acc{i}{a}{b}$ from a quorum of nodes in $\QII{e(i)}$.
 
 \subsection{Dynamic configuration changes}
 
@@ -735,8 +734,8 @@ nondecreasing sequence $e(0), \ldots, e(i_\mathrm{max})$.  Their transitions
 append one or more elements to these sequences, but do not change any existing
 elements, and the tracked sequences are always long enough to make progress: if
 $\chosen{i}{b}$ then they satisfy $i_\mathrm{max} > i$ and $e_\mathrm{max} \ge
-e(i_\mathrm{max})$ in the configuration-sequence state machine. Era numbers
-$e(b)$ for ballots $b$ are fixed in advance and not chosen by Paxos.
+e(i_\mathrm{max})$. Era numbers $e(b)$ for ballots $b$ are fixed in advance and
+not chosen by Paxos.
 
 \subsection{Liveness}\label{liveness}
 
@@ -752,18 +751,19 @@ node $a$ there was a ballot $b' \succ b$ having $\owner{b'} = a$, and any
 sufficiently large such $b'$ would do. However, here there is an upper bound on
 suitable ballots, because if $e(b) > e(i)$ then $\prop{i}{b}$ may never be sent
 and nor may $\prop{i}{b'}$ for any $b' \succ b$ since $e(\cdot)$ is
-nondecreasing.  Therefore $\ell$ must be able to choose a sufficiently large
-ballot in a sufficiently small era. More precisely, this requires that for each
-ballot $b$, each era $e \ge e(b)$ and each node $a$ there must be a ballot $b'
-\succ b$ having $e(b') = e$ and $\owner{b'} = a$.  This means that ballot
-numbers cannot be simple integers, because this would imply that all but one
-era has only finitely many ballots.  Instead one could, for example, let
+nondecreasing.  Therefore here $\ell$ must be able to choose a sufficiently
+large ballot in a sufficiently small era. More precisely, this requires that
+for each ballot $b$, each era $e \ge e(b)$ and each node $a$ there must be a
+ballot $b' \succ b$ having $e(b') = e$ and $\owner{b'} = a$.  This means that
+ballot numbers cannot be simple integers, because this would imply that all but
+one era has only finitely many ballots.  Instead one could, for example, let
 $\mathbb B = \mathbb N \times \mathbb N \times \mathbb A$ ordered
 lexicographically, where $e(\langle e, n, a\rangle) = e$ and $\owner{\langle e,
 n, a \rangle} = a$. This is the approach used in Egalitarian
 Paxos\cite{egalitarian-paxos} in which eras are known as \textit{epochs}: this
-term is not used here to avoid confusion with the epochs of Raft which track
-the current leader rather than the current configuration.
+word is not used here to avoid confusion with the epochs (terms, views, \ldots)
+of the leader-election protocol which track the current leader rather than the
+current configuration.
 
 It is also necessary to limit the promises made to only those where $e(b) \le
 e(i)$: if node $a$ made a promise $\fprom{i}{a}{b}$ with $e(b) > e(i)$ then it
@@ -799,11 +799,11 @@ If $\ell$ has not yet received enough promises for $b_i$ at instance $i$ then
 it broadcasts $\prep{b_i}$ and waits to receive promises from a quorum of nodes
 in $\QI{e(b_i)}$.
 
-Then, if $\ell$ has not yet emitted $\prop{i}{b_i}$ then it it chooses one of
-the values for instance $i$ (which eventually exists), modifies $v_i(b_i)$ as
-appropriate, broadcasts $\prop{i}{b_i}$ and waits to receive acceptances from a
-quorum of nodes in $\QII{e(i)}$. When enough acceptances have been received, it
-follows that $\chosen{i}{b_i}$ as required. \end{proof}
+Then, if $\ell$ has not yet emitted $\prop{i}{b_i}$ it chooses one of the
+values for instance $i$ (which eventually exists), modifies $v_i(b_i)$ as
+appropriate, broadcasts $\prop{i}{b_i}$, and waits to receive acceptances from
+a quorum of nodes in $\QII{e(i)}$. When enough acceptances have been received
+it follows that $\chosen{i}{b_i}$ as required. \end{proof}
 
 \subsection{Fully concurrent configuration changes}
 
@@ -853,14 +853,21 @@ running. Observe the following:
 increases by at most $1$ before the new phase I has finished running. If
 $e(i_\mathrm{max})$ were increased by a larger amount then this would put a
 limit on how many instances can run in the old era, which preserves consistency
-but limits concurrency.
+and liveness but may limit performance.
 %
 \item The second part of this process requires the existence of a node
 $\owner{b'}$ that has a casting vote. If $\owner{b} \ne \owner{b'}$ then this
 step includes an \textit{abdication}: the original leader $\owner{b}$ hands
 over the leadership of the cluster to $\owner{b'}$. If there is no node with a
 casting vote then the broadcast of $\prep{b'}$ will prevent further progress in
-era $e(b)$. Again, this preserves consistency but limits concurrency.
+era $e(b)$. Again, this preserves consistency and liveness but may limit
+performance.
+%
+\item If a node fails during this process then it may be necessary to retry
+some of the steps or possibly even elect a new leader. Again, this preserves
+consistency and liveness but may limit performance. In general it is not
+possible to prevent a failure from having an impact on the performance of the
+system.
 %
 \end{itemize}
 
@@ -880,18 +887,20 @@ $\langle M(w), M(w) \rangle$ by \textit{weighted majority}: \[M(w) = \left\{ q
 Corollary \ref{weights-equal} in appendix \ref{weights-appendix} demonstrates
 the well-known result that $M(w) \frown M(w)$ for any weight function $w$.
 
-\def\maj#1{\mathbf{maj}(#1)}
+\def\wl#1{w^{1 \ldots #1}}
+\def\Mwl#1{M(\wl{#1})}
 
-Raft's quorums are simple majorities of a set of nodes, which can be emulated
-with weight functions that only take values in $\{0, 1\}$, and supports adding
-or removing a single node from this set which amounts to changing the weight of
-a single node by $1$. For instance, if $\mathbb A = \{ a_1, a_2, \ldots \}$
-then let \[w_n(a) = \begin{cases} 1 & \mathrm{if } a \in \{a_1, \ldots, a_n\}
-\\ 0 & \mathrm{otherwise}\end{cases}\] and observe that ${M(w_3) \frown
-M(w_4)}$ and ${M(w_4) \frown M(w_5)}$ but ${M(w_3) \not\frown M(w_5)}$ because
-$\{a_1, a_2\} \in M(w_3)$ and $\{a_3, a_4, a_5\} \in M(w_5)$ do not intersect.
-Thus adding or removing a single node can be done safely, but adding or
-removing more than one node cannot.
+Raft's quorums are simple unweighted majorities of a finite set of nodes, which
+can be emulated with weight functions that only take values in $\{0, 1\}$. It
+only supports adding or removing a single node from this set which amounts to
+changing the weight of a single node by $1$. For instance, if $\mathbb A = \{
+a_1, a_2, \ldots \}$ then define weight functions \[\wl{n}(a) = \begin{cases} 1
+& \mathrm{if } a \in \{a_1, \ldots, a_n\} \\ 0 &
+\mathrm{otherwise}\end{cases}\] and observe that ${\Mwl{3} \frown \Mwl{4}}$ and
+${\Mwl{4} \frown \Mwl{5}}$ but ${\Mwl{3} \not\frown \Mwl{5}}$ because $\{a_1,
+a_2\} \in \Mwl{3}$ and $\{a_3, a_4, a_5\} \in \Mwl{5}$ do not intersect. This
+justifies the restriction against adding or removing more than one node at
+once.
 
 In fact there is no need to restrict attention just to weight functions taking
 values in $\{0, 1\}$ as shown by theorem \ref{weights-nearly-equal} which is
@@ -899,10 +908,10 @@ reminiscent of the amoeba analogy in \cite{cheap-paxos}: any two weight
 functions that differ by at most one at at most one node can be used to define
 consecutive configurations. This extra generality is important for deployments
 where nodes may share infrastructure (e.g. power distribution or network
-connectivity) because such nodes may suffer correlated failures, and
-infrastructure tends to be expensive to replicate. In more detail, a na\"ive
-approach to replacing a node in a three-node cluster would be to perform this
-sequence of configuration changes: \[\begin{array}{rcccc}
+connectivity) because such nodes may suffer correlated failures, and reducing
+this correlation tends to be expensive.  In more detail, a na\"ive approach to
+replacing a node in a three-node cluster would be to perform this sequence of
+configuration changes: \[\begin{array}{rcccc}
 %
 \textrm{node}&a_{\textrm{old}}&a_{\textrm{new}}&a_1&a_2 \\
 %
@@ -915,12 +924,12 @@ w_{e+2}&0&1&1&1\\
 \end{array}\]
 %
 However to be resilient to infrastructure failures this requires all four nodes
-and their corresponding infrastructure to be completely independent since it
-can only handle a single node failure throughout. It also has no node with a
-casting voite in era $e+1$. On the other hand the following sequence requires
-only three separate sets of infrastructure since the system can continue to
-operate even if both $a_{\textrm{old}}$ and $a_{\textrm{new}}$ fail, and both
-$a_1$ and $a_2$ have casting votes throughout: \[\begin{array}{rcccc}
+and their underlying infrastructures to be completely independent since a
+correlated failure of two nodes would prevent further progress.  It also has no
+node with a casting vote in era $e+1$. On the other hand the following sequence
+allows $a_{\textrm{old}}$ and $a_{\textrm{new}}$ to share infrastructure
+without extra risk, and both $a_1$ and $a_2$ have casting votes throughout:
+\[\begin{array}{rcccc}
 %
 \textrm{node}&a_{\textrm{old}}&a_{\textrm{new}}&a_1&a_2 \\
 %
@@ -939,7 +948,7 @@ w_{e+4}&0&2&2&2\\
 This is important as in many operating environments it may be too expensive or
 complicated to arrange for four independent infrastructures particularly if the
 fourth is only required to ensure consistency in relatively rare periods of
-maintenance. For instance, at time of writing, only one Amazon Web Services
+maintenance. For instance at time of writing only one Amazon Web Services
 region (\texttt{us-east-1}) has four independent zones, whereas four of them
 have three: \texttt{ap-southeast-2}, \texttt{eu-west-1}, \texttt{sa-east-1} and
 \texttt{us-west-2}. Similarly, only one Google Cloud Platform region
@@ -981,10 +990,10 @@ be complete before any new phase II instances can be started.  To prevent this
 causing the pipeline to stall, the operator chooses an $\alpha > 0$ and sets
 $e(i+\alpha) = e(i)+2$ and $e(j) = e(i)$ for $i < j \le i + \alpha$,
 effectively delaying the configuration change for $\alpha$ instances in the
-hope that this is long enough to have completed the new phase I. Unlike in
-Dynamic Paxos there is no need to limit the pipeline length unless a
-configuration change is in progress, and different changes may use different
-values of $\alpha$ if required.
+hope that this is long enough to have completed the new phase I. This improves
+slightly on Dynamic Paxos as there is no need to limit the pipeline length
+unless a configuration change is in progress, and different changes may use
+different values of $\alpha$ if required.
 
 \section{Related Work}
 
@@ -1006,7 +1015,8 @@ it must be possible to reconfigure the oracle itself, which requires another
 oracle and so on \textit{ad infinitum}. Egalitarian
 Paxos\cite{egalitarian-paxos} also defines a nondecreasing $e(b)$ for each
 ballot $b$ to ensure that ballots are not chosen when their configuration is
-stale. As with Vertical Paxos these values are managed by an external oracle.
+stale, but as with Vertical Paxos these values are managed by an external
+oracle.
 
 It is also noted that there is no need for every node to receive (even a hash
 of) every value that is proposed, which may allow for even cheaper
@@ -1016,16 +1026,15 @@ of state\cite{vertical-paxos} required when new nodes are commissioned.
 An interesting alternative approach is proposed by Jahl and
 Meling\cite{async-reconfig} which uses eventual consistency rather than
 consensus to determine the configuration of the system, and therefore supports
-reconfiguration even if consensus cannot be achieved due to an inability to
-elect a leader as long as it is still possible to communicate with a quorum of
-nodes. In such a situation consensus-based approaches such as the one presented
-here would fail to make any further progress, whereas one based on eventual
-consistency could be reconfigured into one in which a leader may be elected and
-thus in which further progress can be made.  It is certainly possible to modify
-the approach presented here to allow the configurations $\langle \QI{e},
-\QII{e} \rangle$ themselves to be defined in an eventually-consistent manner;
-defining $e(i)$ similarly seems feasible too but the details have so far proved
-elusive.
+reconfiguration as long as it is still possible to communicate with a quorum of
+nodes even if consensus cannot be achieved due to an inability to elect a
+leader. In such a situation consensus-based approaches such as the one
+presented here would fail to make any further progress, whereas one based on
+eventual consistency could be reconfigured into one in which a leader may be
+elected and thus in which further progress can be made.  It is certainly
+possible to modify the approach presented here to allow the configurations
+themselves to be defined in an eventually-consistent manner; defining $e(i)$
+similarly seems feasible too but the details have so far proved elusive.
 
 
 % An example of a floating figure using the graphicx package.
@@ -1138,8 +1147,8 @@ invariants.
 
 \begin{enumerate}
 
-\item \label{synod-quorums} For $b_1 \succ b_2 \in \mathbb B$ there are
-configurations $Q^\textrm{I}(b_1)$ and $Q^\textrm{II}(b_2) \subseteq \mathcal P
+\item \label{synod-quorums} For $b_1 \succ b_2 \in \mathbb B$ there are sets of
+quorums $Q^\textrm{I}(b_1)$ and $Q^\textrm{II}(b_2) \subseteq \mathcal P
 \mathbb A$ such that if $\prop{}{b_1}$ and $\chosen{}{b_2}$ then
 ${Q^\textrm{I}(b_1) \frown Q^\textrm{II}(b_2)}$.
 
@@ -1150,17 +1159,16 @@ ${Q^\textrm{I}(b_1) \frown Q^\textrm{II}(b_2)}$.
 $\acc{}{a}{b'}$, and $b'$ is the greatest such ballot, in the sense that
 $\neg\acc{}{a}{b''}$ for all $b''$ having $b' \prec b'' \prec b$.
 
-\item \label{synod-prop} $\prop{}{b}$ only if there is a quorum $q^\textrm{I}
-\in Q^\textrm{I}(b)$ such that for every node $a \in q^\textrm{I}$ either
+\item \label{synod-prop} $\prop{}{b}$ only if there is $q^\textrm{I} \in
+Q^\textrm{I}(b)$ such that for every node $a \in q^\textrm{I}$ either
 $\fprom{}{a}{b}$ or else $\exists b'.  \bprom{}{a}{b}{b'}$, and if ${P = \{ b'
 \mid \exists a \in q^\textrm{I}. \bprom{}{a}{b}{b'} \} \ne \varnothing}$ then
 it follows that $v(b) = v(\mathrm{max}(P))$.
 
 \item \label{synod-acc} $\acc{}{a}{b}$ only if $\prop{}{b}$.
 
-\item \label{synod-chosen} $\chosen{}{b}$ only if there is a quorum
-$q^\textrm{II} \in Q^\textrm{II}(b)$ such that $\acc{}{a}{b}$ for every $a \in
-q^\textrm{II}$.
+\item \label{synod-chosen} $\chosen{}{b}$ only if there is $q^\textrm{II} \in
+Q^\textrm{II}(b)$ such that $\acc{}{a}{b}$ for every $a \in q^\textrm{II}$.
 
 \end{enumerate}
 
@@ -1174,14 +1182,14 @@ also such a ballot and therefore $b_2 \preceq b_3$ as required.  \end{proof}
 \begin{lemma}\label{synod-lemma} If $\chosen{}{b_2}$, $\prop{}{b_1}$ and $b_2
 \prec b_1$ then $v(b_1) = v(b_2)$. \end{lemma}
 
-\begin{proof}Suppose for a contradiction the result is false, and since $\prec$
-is wellfounded suppose without loss of generality that $b_1$ is the minimal
-ballot at which it is false.  Since $\chosen{}{b_2}$, by invariant
-\ref{synod-chosen} there is a quorum $q^\textrm{II} \in Q^\textrm{II}(b_2)$
-such that $\acc{}{a}{b_2}$ for every $a \in q^\textrm{II}$.  By invariant
+\begin{proof}Suppose for a contradiction that $v(b_1) \ne v(b_2)$ and since
+$\prec$ is wellfounded suppose without loss of generality that $b_1$ is the
+minimal such ballot.  Since $\chosen{}{b_2}$ by invariant \ref{synod-chosen}
+there is a quorum $q^\textrm{II} \in Q^\textrm{II}(b_2)$ such that
+$\acc{}{a}{b_2}$ for every $a \in q^\textrm{II}$.  By invariant
 \ref{synod-fprom} it cannot be that $\fprom{}{a}{b_1}$ for any $a \in
-q^\textrm{II}$.  Also, since $\prop{}{b_1}$, by invariant \ref{synod-prop}
-there is a quorum $q^\textrm{I} \in Q^\textrm{I}(b_1)$ such that either
+q^\textrm{II}$.  Also since $\prop{}{b_1}$ by invariant \ref{synod-prop} there
+is a quorum $q^\textrm{I} \in Q^\textrm{I}(b_1)$ such that either
 $\fprom{}{a}{b_1}$ or $\exists b'.  \bprom{}{a}{b_1}{b'}$ for all $a \in
 q^\textrm{I}$.  Let $P = \{ b' \mid \exists a \in q^\textrm{I}.
 \bprom{}{a}{b_1}{b'} \}$.  By invariant \ref{synod-quorums},
@@ -1214,9 +1222,9 @@ invariants.
 
 \begin{enumerate}
 
-\item\label{paxos-quorums} There are sets of quorums $Q^\textrm{I}_0,
-Q^\textrm{I}_1, \ldots$ and $Q^\textrm{II}_0, Q^\textrm{II}_1, \ldots$ where
-${Q^\textrm{II}_e \frown Q^\textrm{I}_e \frown \QII{e+1}}$ for each $e$.
+\item\label{paxos-quorums} There are configurations $\langle \QI{0}, \QII{0}
+\rangle, \langle \QI{1}, \QII{1} \rangle, \ldots$ where ${\QII{e} \frown \QI{e}
+\frown \QII{e+1}}$ for each $e$.
 
 \item\label{paxos-mprom} $\mprom{i}{a}{b}$ only if $\neg\acc{i'}{a}{b'}$ for
 all $i' \ge i$ and $b' \prec b$, and $e(b) \le e(i)$.
@@ -1259,10 +1267,10 @@ every $a \in q$.  \end{itemize}
 ${\QI{e(b_1)} \frown \QII{e(i)}}$.  \end{lemma}
 
 \begin{proof} $\prop{i}{b_1}$ implies that $\mprom{i'}{a}{b_1}$ or
-$\fprom{i'}{a}{b_1}$ or $\bprom{i'}{a}{b_1}{b'}$ for some node $a$ and $i' \le
-i$. Therefore $e(i) \le e(b_2) + 1 \le e(b_1) + 1 \le e(i') + 1 \le e(i) + 1$
-since $\chosen{i}{b_2}$ and $e$ is nondecreasing.  Therefore $e(i) \in \{ e(b),
-e(b) + 1 \}$ and hence ${\QI{e(b_1)} \frown \QII{e(i)}}$ by invariant
+$\fprom{i'}{a}{b_1}$ or $\bprom{i'}{a}{b_1}{b'}$ for some node $a$ and some $i'
+\le i$. Therefore $e(i) \le e(b_2) + 1 \le e(b_1) + 1 \le e(i') + 1 \le e(i) +
+1$ since $\chosen{i}{b_2}$ and $e$ is nondecreasing so that $e(i) \in \{
+e(b_1), e(b_1) + 1 \}$ and hence ${\QI{e(b_1)} \frown \QII{e(i)}}$ by invariant
 \ref{paxos-quorums}.  \end{proof}
 
 \begin{theorem}\label{paxos-safety-theorem} If $\chosen{i}{b_1}$ and
