--- a/paxos-reconf.tex
+++ b/paxos-reconf.tex
@@ -1170,10 +1170,10 @@ d_{\mathbb A} & a_0 \in q' \\
 so that $\sum_{a \in q'} w'(a) = \sum_{a \in q'} w(a) + d_{q'}$.
 %
 Then
-\begin{multline}
+\begin{multline*}
 \sum_{a \in \mathbb A} 2w(a) + d_{\mathbb A} + 2 \\
 %
-\end{multline}
+\end{multline*}
 \begin{gather*}
 %
 \begin{aligned}
