--- a/paxos-reconf.tex
+++ b/paxos-reconf.tex
@@ -1170,13 +1170,10 @@ d_{\mathbb A} & a_0 \in q' \\
 so that $\sum_{a \in q'} w'(a) = \sum_{a \in q'} w(a) + d_{q'}$.
 %
 Then
-\begin{multline*}
-\sum_{a \in \mathbb A} 2w(a) + d_{\mathbb A} + 2 \\
 %
-\end{multline*}
-\begin{gather*}
+\[\begin{split}
 %
-\begin{aligned}
+\sum_{a \in \mathbb A} 2w(a) &+ d_{\mathbb A} + 2 \\
 %
 &= \left( \sum_{a \in \mathbb A} w(a)  + 1\right)
 +  \left( \sum_{a \in \mathbb A} w'(a) + 1\right) \\
@@ -1191,9 +1188,9 @@ Then
 +  \sum_{a \in q \cap q'} 2w(a) + 2d_{q'}\\
 %
 &\le \sum_{a \in \mathbb A} 2w(a)
-+    \sum_{a \in q \cap q'} 2w(a) + 2d_{q'},\\
++    \sum_{a \in q \cap q'} 2w(a) + 2d_{q'}\\
 %
-\end{aligned}\end{gather*} so that $\sum_{a \in q \cap q'} 2w(a) \ge d_{\mathbb
+\end{split}\] so that $\sum_{a \in q \cap q'} 2w(a) \ge d_{\mathbb
 A} + 2 - 2d_{q'} = 2 \pm d_\mathbb A \ge 1$ and hence $q \cap q' \ne
 \varnothing$ as desired.  \end{proof}
 
