Rename bib database

--- a/paxos-reconf.tex
+++ b/paxos-reconf.tex
@@ -1392,7 +1392,7 @@ Nikolaus Jehl for their advice and comments on earlier drafts of this paper.
 % http://www.michaelshell.org/tex/ieeetran/bibtex/
 \bibliographystyle{IEEEtran}
 % argument is your BibTeX string definitions and bibliography database(s)
-\bibliography{paxos-reconf}
+\bibliography{paxos}
 %
 % <OR> manually copy in the resultant .bbl file
 % set second argument of \begin to the number of references
